# cmake_cpp_examples

./: .gitignore  LICENSE  README.md
cmake_executable/: CMakeLists.txt
cmake_executable/include/: version.hpp
cmake_executable/src/: main.cpp
cmake_library/: CMakeLists.txt
cmake_library/include/: library.hpp  version.hpp
cmake_library/src/: library.cpp
